...
private const val PROFILE = "_profile"
private const val LIST = "_list"

// Private object containing UI actions
private object A {
  const val NEW = "new"
  const val EDIT = "edit"
  const val DELETE = "delete"
  const val CONFIRM = "confirm"
  const val CANCEL = "cancel"
  const val NEXT = "next"
  const val BACK = "back"
}

...
    const val new_user_screen_container = S.NEW_USER + UI_T.SCREEN_CONTAINER
    const val user_profile_screen_container = S.USER_PROFILE + UI_T.SCREEN_CONTAINER
    const val other_user_profile_screen_container = S.OTHERS_USER_PROFILE + UI_T.SCREEN_CONTAINER
    const val edit_profile_screen_container = S.EDIT_PROFILE + UI_T.SCREEN_CONTAINER
    const val map_screen_container = S.MAP + UI_T.SCREEN_CONTAINER
    const val map_filters_screen_container = S.MAP_FILTER + UI_T.SCREEN_CONTAINER
    const val new_book_choice_screen_container = S.NEW_BOOK + "_choice" + UI_T.SCREEN_CONTAINER
    const val new_book_isbn_screen_container = S.NEW_BOOK + "_isbn" + UI_T.SCREEN_CONTAINER
    const val new_book_manual_screen_container = S.NEW_BOOK + "_manual" + UI_T.SCREEN_CONTAINER
    const val new_book_scan_screen_container = S.NEW_BOOK + "_scan" + UI_T.SCREEN_CONTAINER
    const val edit_book_screen_container = S.EDIT_BOOK + UI_T.SCREEN_CONTAINER
    const val book_profile_screen_container = S.BOOK_PROFILE + UI_T.SCREEN_CONTAINER
    const val chat_list_screen_container = S.CHAT_LIST + UI_T.SCREEN_CONTAINER
    const val chat_screen_container = S.CHAT + UI_T.SCREEN_CONTAINER
    const val bottom_navigation_menu_container = "bottom_navigation_menu" + UI_T.CONTAINER
    const val top_app_bar_container = "top_app_bar" + UI_T.CONTAINER

    // TopAppBar specific tags (TopAppBarComponent.kt)
    object TopAppBar {
      const val back_button = A.BACK + UI_T.ICON_BUTTON
      const val back_icon = A.BACK + UI_T.ICON
      const val screen_title = "screen_title"
      const val profile_button = S.USER_PROFILE + UI_T.ICON_BUTTON
      const val profile_icon = S.USER_PROFILE + UI_T.ICON
    }

...
      const val divider = BOOK + LIST + UI_T.DIVIDER
    }

    object BookEntryComp {
      // Parent container
      const val entries_list_book_container = "entries_list_book" + UI_T.CONTAINER
      const val scrollable = "scrollable" + UI_T.SCROLLABLE_CONTAINER
      // Fields
      const val title_field = "title" + UI_T.TEXT_FIELD
      const val genre_field = "genres" + UI_T.DROPDOWN
      const val author_field = "author" + UI_T.TEXT_FIELD
      const val description_field = "description" + UI_T.TEXT_FIELD
      const val rating_field = "rating" + UI_T.TEXT_FIELD
      const val isbn_field = "isbn" + UI_T.TEXT_FIELD
      const val photo_field = "photo" + UI_T.IMAGE_FIELD
      const val language_field = "language" + UI_T.DROPDOWN

      // Dropdown menus
      const val genre_menu = "genre_menu" + UI_T.SCROLLABLE_CONTAINER
      const val genre_menu_item = "genre_menu_item" + UI_T.CONTAINER
      const val language_menu = "language_menu" + UI_T.SCROLLABLE_CONTAINER
      const val language_menu_item = "language_menu_item" + UI_T.CONTAINER

      // Buttons
      const val action_buttons = "action_buttons" + UI_T.CONTAINER
      const val confirm_button = A.CONFIRM + UI_T.BUTTON
      const val cancel_button = A.CANCEL + UI_T.BUTTON

      const val rating_field_stars = "rating_stars" + UI_T.CONTAINER
      const val rating_star = "rating_star" + UI_T.ICON
      const val rating_star_empty = "rating_star_empty" + UI_T.ICON
    }
...
      }
    }

    // New Book ISBN Screen specific tags (AddISBNScreen.kt)
    object NewBookISBN {
      const val isbn = "isbn" + UI_T.TEXT_FIELD
      const val search = "search" + UI_T.BUTTON
    }

    // New Book Manually Screen specific tags (AddToBook.kt)
    object NewBookManually {
      const val title = BOOK + "_title" + UI_T.TEXT_FIELD
      const val genres = BOOK + "_genres" + UI_T.FIELD
      const val author = "author " + UI_T.TEXT_FIELD
      const val synopsis = "description " + UI_T.TEXT_FIELD
      const val rating = "rating " + UI_T.TEXT_FIELD
      const val isbn = "isbn " + UI_T.TEXT_FIELD
      const val photo = "photo" + UI_T.IMAGE_FIELD
      const val language = BOOK + "_language" + UI_T.FIELD
      const val save = A.CONFIRM + UI_T.BUTTON
    }

    // Edit Book Screen specific tags (EditBookScreen.kt)
    object EditBook {
      const val scrollable = Screen.EDIT_BOOK + UI_T.SCROLLABLE_CONTAINER
      const val title = BOOK + "_title" + UI_T.TEXT_FIELD
...
      const val filter = "_filter" + UI_T.BUTTON
    }

    // Chat List Screen specific tags (ChatList.kt)
    object ChatList {
      const val scrollable = S.CHAT_LIST + UI_T.SCROLLABLE_CONTAINER
      const val item = S.CHAT + "_item" + UI_T.CONTAINER
      const val contact = S.CHAT + "_contact" + UI_T.TEXT
      const val message = S.CHAT + "_message" + UI_T.TEXT
      const val timestamp = S.CHAT + "_timestamp" + UI_T.TEXT
    }

    // Chat Screen specific tags (ChatScreen.kt)
    object ChatScreen {
      const val scrollable = Screen.CHAT + UI_T.SCROLLABLE_CONTAINER
...
      const val edit = A.EDIT + UI_T.BUTTON
      const val delete = A.DELETE + UI_T.BUTTON
      const val messages = "message_item"
      const val container = messages + UI_T.CONTAINER
      const val content = messages + "_content"
      const val timestamp = messages + "_timestamp" + UI_T.TEXT
      const val pop_out = "pop_out" + UI_T.CONTAINER
    }
  }

  // Top-level navigation routes
  object Route {
    const val AUTH = S.AUTH
...
